test/fixtures/esprima/invalid-syntax/.migrated_0166/actual.js
var source = '\u200C = []';
